_sass/grid.scss
/*  SECTIONS  */
.section {
	clear: both;
	padding: 0px;
	margin: 0px;
}

/*  COLUMN SETUP  */
.col {
	display: block;
	float: left;
	margin: 1% 0 1% 3%;
	text-align: center;
}

/*  GROUPING  */
.row:before,
.row:after { content:""; display:table; }
.row:after { clear:both;}
.row { zoom:1; /* For IE 6/7 */ }

/*  GRID OF THREE  */
.span_3_of_3 { width: 100%; }
.span_2_of_3 { width: 66.13%; }
.span_1_of_3 { width: 30.33%; }

/*  GO FULL WIDTH BELOW 480 PIXELS */
@media only screen and (max-width: $medium-only) {
	.col {  margin: 1% 0 1% 0%; }
	.span_3_of_3, .span_2_of_3, .span_1_of_3 { width: 100%; }
}

@media only screen and (min-width: $extra-large) {
	.col:nth-child(3n+1) {
		clear: both;
	}
}

.gallery__image {
    width: 100%;
    height: auto;
    -webkit-backface-visibility: hidden;
    -webkit-transform: translateZ(0) scale(1.0, 1.0);
}

@media (min-width: $medium-only) and (max-width: $extra-large) {
	.col {
		width: 48%;
		margin-left: 0;

		&:nth-child(odd) {
			clear: both;
		}

		&:nth-child(even) {
			margin-left: 3%;
		}
	}
}

.pagination {
    display: table;
    margin: auto;
    padding: 20px 0;
}

.pager {
	display: inline;
}

.pagination a {
    color: black;
    padding: 8px 16px;
    text-decoration: none;
    cursor: default;
}

.pager-collection {
	display: inline-block;
}

.pagination a.active {
    background-color: #4CAF50;
    color: white;
}

.hover-page:hover:not(.page-active) {
    cursor: pointer;
}

.page-active,
.hover-page:hover { 
    background-color: #ddd;
}

.gallery-table {
	overflow: hidden;
	position: relative;
	width: 100%;
}

.gallery-table__container {
	display: inline-block;
    position: inherit;
    overflow: auto;
	width: inherit;
}

.gallery-table__container--active {
    left: 0;
}

.gallery-table__container--hidden {
	position: absolute;
}

.prev {
	left: -100%;
}

.next {
	left: 100%;
}

.gallery-table__container--active,
.prev,
.next {
	-webkit-transition: all 0.5s ease;
	-moz-transition: all 0.5s ease;
	-o-transition: all 0.5s ease;
	-ms-transition: all 0.5s ease;
	transition: all 0.5s ease;
}

